fix: fixed alembic issues in docker
