# docs/openapi.json
@@ -293,6 +293,11 @@
             "type": "string",
             "title": "Created",
             "description": "The UTC timestamp when the Trail was created, in ISO 8601 format."
+          },
+          "lifetime": {
+            "type": "integer",
+            "title": "Lifetime",
+            "description": "The lifetime of the Trail in hours."
           }
         },
         "type": "object",
@@ -300,7 +305,8 @@
           "id",
           "url",
           "visits",
-          "created"
+          "created",
+          "lifetime"
         ],
         "title": "TrailInfo"
       },
